# JohnnyTracer2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/scenes/: test.pov
src/: CMakeLists.txt  main.cpp
src/Light/: AreaLight.cpp
src/camera/: BoxFilter.cpp  BoxFilter.h  CMakeLists.txt  ImageFilm.cpp  ImageFilm.h  OrthroCamera.cpp  OrthroCamera.h  OthoCamera.cpp  OthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  ProjectionCamera.cpp  ProjectionCamera.h
src/core/: BBox.cpp  BBox.h  CMakeLists.txt  Film.cpp  Film.h  ICamera.cpp  ICamera.h  IFilm.cpp  IFilm.h  IFilter.cpp  IFilter.h  ILight.cpp  ILight.h  IMaterial.cpp  IMaterial.h  IParser.h  IPrimitive.h  IRenderer.cpp  IRenderer.h  ISampler.h  IShape.cpp  IShape.h  ITexture.h  IVolumeIntegrator.h  IVolumeRegion.cpp  NullCore.h  Scene.h  SceneContext.h  Transform.cpp  Transform.h  nothing.cpp
src/core/base/: IAggregate.cpp  IAggregate.h  ICamera.cpp  ICamera.h  IFilter.cpp  IFilter.h  IIntegrator.cpp  IIntegrator.h  ILight.cpp  ILight.h  IMaterial.h  IMedium.cpp  IMedium.h  ISampler.cpp  ISampler.h  IShape.cpp  IShape.h  ITexture.cpp
src/core/utils/: Constants.h  SceneContext.h  UnitUtils.h
src/fileparser/: CMakeLists.txt  IParser.cpp  IParser.h  POVElemParser.cpp  POVElemParser.h  POVParser.cpp  POVParser.h  SceneCreator.cpp  SceneCreator.h  SceneElem.h  SceneElemParser.cpp  SceneElemParser.h  SceneFileParser.cpp  SceneFileParser.h
src/fileparser/povray/: POVParser.cpp  POVParser.h
src/geometry/: BBox.cpp  BBox.h  CMakeLists.txt  GeomData.h  GeomPrimitive.cpp  GeomPrimitive.h  HitData.h  IMaterial.h  IPrimitive.cpp  IPrimitive.h  Interaction.h  Iprimitive.h  Ray.h  SurfaceInteraction.h  Transform.cpp  Transform.h
src/geometry/bxdfs/: BSDF.cpp  BSDF.h  BXDF.h
src/geometry/shapes/: Box.cpp  Box.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/integrators/: CMakeLists.txt  ISurfaceIntegrator.cpp  ISurfaceIntegrator.h  IVolumeIntegrator.cpp  IVolumeRegion.h
src/light/: AreaLight.cpp  AreaLight.h  CMakeLists.txt  PointLight.cpp  PointLight.h
src/sampler/: CMakeLists.txt  CameraSample.h  Sample.h
src/samplers/: CMakeLists.txt  CameraSample.h  Sample.h
src/scene/: CMakeLists.txt  IParser.h  Scene.cpp  Scene.h  SceneContext.h  SceneCreator.cpp  SceneCreator.h  SceneElem.h  SceneElemMod.h
src/utils/: CMakeLists.txt  Constants.h  UnitUtils.h
test/: CMakeLists.txt
test/common/: catch.hpp  printHelper.h  veccompare.h
test/testcore/: TestTransform.cpp  testcore.cpp
